RESOLVED FIXED125362
REGRESSION (r160148): Mail throws an exception during launch
https://bugs.webkit.org/show_bug.cgi?id=125362
Summary REGRESSION (r160148): Mail throws an exception during launch
mitz
Reported 2013-12-06 13:24:48 PST
REGRESSION (r160148): Mail throws an exception during launch
Attachments
Actually wrap WebConnection in WKConnection (4.19 KB, patch)
2013-12-06 13:32 PST, mitz
sam: review+
mitz
Comment 1 2013-12-06 13:32:48 PST
Created attachment 218619 [details] Actually wrap WebConnection in WKConnection
mitz
Comment 2 2013-12-06 13:33:56 PST
mitz
Comment 3 2013-12-06 13:38:14 PST
Note You need to log in before you can comment on or make changes to this bug.